[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.9.6", features = ["json"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
thiserror = "1.0.57"
url = "2.5.0"
reqwest = {version = "0.11.24", features = ["json"], optional=true}

[features]
async = [
  "reqwest"
]
